<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/descrip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrip"
        android:textSize="15dp"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/name_text"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15dp"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/birthdate_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/birthdate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="15dp"
        android:layout_above="@+id/receive_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp" />

    <TextView
        android:id="@+id/finalage_text"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/finalage"
        android:textSize="15dp"
        android:layout_above="@+id/receive_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/receive_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_button"
        android:textSize="25dp"
        android:layout_centerVertical="true" />

</RelativeLayout>
